src/assets/base.css
@import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap');

:root {
  --white: #ffffff;
  --white-soft: #f8f8f8;
  --white-mute: #f2f2f2;

  --black: #181818;
  --black-soft: #222222;
  --black-mute: #282828;
  --black-light: #363636;

  --gray: #888;

  --indigo: #2c3e50;

  --bluecat: #6f91ff;

  --brand: #9B32FF;
  --brand-hover: #ab52ff;
  --green-success: #00d369;
  --red-error: #e44949;
}

/* semantic color variables for this project */
:root {
  --color-background: var(--white-mute);
  --color-text: var(--black-light);

  --color-brand: var(--brand);
  --color-brand-hover: var(--brand-hover);
  --color-success: var(--green-success);
  --color-error: var(--red-error);

  --color-container: var(--white);

  --color-link: var(--bluecat);
}
@media (prefers-color-scheme: dark) {
  :root {
    --color-background: var(--black-soft);
    --color-text: var(--white-soft);

    --color-container: var(--black-light);
  }
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;

  font-weight: normal;
  font-family: "Funnel Sans";
}

body {
  min-height: 100dvh;
  display: flex;
  flex-direction: column;
  /* justify-content: center; */

  color: var(--color-text);
  background: var(--color-background);  

  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

